blogstyle.css
body {
  background: #eee;
}

div {
  border: 1px solid black;
}

.container,
.container-fluid {
  margin-bottom: 50px;
}

.container--skills .col-md {
  background: #efe;
  margin-right: 10px;
  text-align: center;
}

footer .row {
  background: black;
  color: white;
}

.container-carousel,
.container-fluid {
  background: #3399cc;
  padding: 40px;
}

img {
  max-width: 100%;
}

a {
  transition: all 150ms ease;
}
a:hover {
  opacity: 0.6;
  text-decoration: none;
}

/* Container */
.container-fluid {
  background: #ffffff;
  margin: 40px auto 10px;
  padding: 20px 40px 0;
  max-width: 960px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
}

/* Page Header */
.page-header {
  background: #f9f9f9;
  margin: -30px -40px 40px;
  padding: 20px 40px;
  border-top: 4px solid #ccc;
  color: #999;
  text-transform: uppercase;
}
.page-header h3 {
  line-height: 0.88rem;
  color: #000;
}

/* Thumbnail Box */

.thumbnails {
  list-style: none;
}

.thumbnail {
  display: block;
  padding: 4px;
  line-height: 20px;
  border: 1px solid #ddd;
  border-radius: 4px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
  transition: all 0.2s ease-in-out;
}

.caption h4 {
  font-size: 1rem;
  color: #444;
}
.caption p {
  font-size: 0.75rem;
  color: #999;
}
.btn.btn-mini {
  font-size: 0.63rem;
}

/* Carousel Control */
.control-box {
  text-align: right;
  width: 100%;
}
.carousel-control {
  background: #666;
  border: 0px;
  border-radius: 0px;
  display: inline-block;
  font-size: 34px;
  font-weight: 200;
  line-height: 18px;
  opacity: 0.5;
  padding: 4px 10px 0px;
  position: static;
  height: 30px;
  width: 15px;
}

/* Footer */

/* Mobile Only */
@media (max-width: 767px) {
  .page-header,
  .control-box {
    text-align: center;
  }
}
@media (max-width: 479px) {
  .caption {
    word-break: break-all;
  }
}

/* ADD-ON
-------------------------------------------------- */

::selection {
  background: #ff5e99;
  color: #ffffff;
  text-shadow: 0;
}
::-moz-selection {
  background: #ff5e99;
  color: #ffffff;
}

a,
a:focus,
a:active,
a:hover,
object,
embed {
  outline: none;
}
:-moz-any-link:focus {
  outline: none;
}
input::-moz-focus-inner {
  border: 0;
}

